registererをちょっと改善

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "db:generate": "drizzle-kit generate:sqlite --out migrations --schema database/schema.ts",
     "db:dev:migrate": "wrangler d1 migrations apply tokyo-tech-syllabus --local",
-    "db:prod:migrate": "wrangler d1 migrations apply tokyo-tech-syllabus --remote",
+    "db:prod:migrate": "wrangler d1 migrations apply tokyo-tech-syllabus-next --remote",
     "db:migration:dev": "bun db:generate && bun db:dev:migrate",
     "db:migration:prod": "bun db:generate && bun db:prod:migrate",
     "scraper:start": "bun run scraper/main.ts",
     "registerer:start": "wrangler dev registerer/main.ts --port 33576",
-    "registerer:register": "bun run registerer/register.ts",
+    "registerer:register:prod": "CHUNK_SIZE=1 bun run registerer/register.ts",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
